--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,31 @@ description = ""
 authors = ["Yannick Aaron Lehr <yannick.lehr@ioki.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10.3"
+python = "^3.9"
+pre-commit = "^2.20.0"
+pylint = "^2.15.2"
+black = "^22.8.0"
+isort = "^5.10.1"
+pytest-cov = "^3.0.0"
+coverage = "^6.4.4"
+ipykernel = "^6.15.2"
+toml = "^0.10.2"
+nbqa = "^1.4.0"
+pyupgrade = "^2.37.3"
+pandas = "^1.4.4"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
 pylint = "^2.11.1"
-mypy = "^0.910"
-pytest = "^6.2.5"
+mypy = "^0.971"
+pytest = "^7.1.3"
 black = "^22.3.0"
 isort = "^5.10.1"
 pytest-cov = "^3.0.0"
 coverage = "^6.1.2"
 ipykernel = "^6.6.0"
+ipynbname = "^2021.3.2"
+notebook = "^6.4.8"
 toml = "^0.10.2"
 nbqa = "^1.3.1"
 pyupgrade = "^2.31.1"
@@ -28,7 +41,6 @@ build-backend = "poetry.core.masonry.api"
 [tool.black]
 line-length = 132
 target-version = ['py37', 'py38']
-include = '(src\/scripts\/.*$|\.pyi?$)'
 exclude = '''
 /(
     \.git
