--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ toml = "^0.10.2"
 nbqa = "^1.4.0"
 pyupgrade = "^2.37.3"
 pandas = "^1.4.4"
+dash = "^2.6.1"
+jupyter-dash = "^0.4.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.18.1"
@@ -33,6 +35,7 @@ notebook = "^6.4.8"
 toml = "^0.10.2"
 nbqa = "^1.3.1"
 pyupgrade = "^2.31.1"
+ipywidgets = "^8.0.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
